src/css/components/card-list.styl
/*--------------------------------------------------------------------
* $LIST
--------------------------------------------------------------------*/

.list
  margin: var(--body-padding)
  margin-bottom: calc(var(--body-padding)*2)

  h2
    margin-bottom: 0
    padding: 15px 0
    position: sticky
    top: 0
    scroll-margin-top: 20px
    background-color: alpha($body-bg,.9)
    box-shadow: -20px 0 0 $body-bg,
                20px 0 0 $body-bg
    text-transform: uppercase
    font-weight: $font-weight-medium
    font-size: 95%
    z-index: 20

  .card-list
    margin-bottom: 0
    display: grid
    @media screen and (max-width: $bp-md)
      gap: 1rem
    @media screen and (min-width: $bp-md + 1)
      gap: 1.2rem

    // 1 across for tiny screens
    @media screen and (max-width: $bp-sm)
      grid-template-columns: 1fr

    // 2 across for small screens
    @media screen and (min-width: $bp-sm + 1) and (max-width: $bp-md)
      grid-template-columns: repeat(2,1fr)

    // 3 across for mid screens
    @media screen and (min-width: $bp-md + 1) and (max-width: $bp-lg)
      grid-template-columns: repeat(3,1fr)
      &.stills
        grid-template-columns: repeat(2,1fr)

    // 4 across for big screens
    @media screen and (min-width: $bp-lg + 1)
      grid-template-columns: repeat(4,1fr)

    // 5 across for xl screens
    @media screen and (min-width: $bp-xlg + 1)
      grid-template-columns: repeat(5,1fr)

    // 6 across for xxl screens
    @media screen and (min-width: $bp-xxlg + 1)
      grid-template-columns: repeat(6,1fr)

    // 2 across for big screens
    &.the-jump-street-collection,
    &.krillhunter-collection,
    &.the-candy-black-collection
      @media screen and (min-width: $bp-sm + 1)
        grid-template-columns: repeat(2,1fr)

    // category subpage
    &.categories li a
      display: grid
      align-items: end
      background: black
      border-radius: 3px
      font-weight: 600
      overflow: hidden

      @media screen and (min-width: 550px)
        font-size: 110%

      &:hover
        text-decoration: none

      img
        position: absolute
        top: 0
        left: 0
        z-index: -1
        mask-image: radial-gradient(ellipse at top right, black(.9) 40%, black(0) 75%)

      span
        padding: 1em
        background-image: linear-gradient(to top, black(.5) 20%, black(0) 100%)

  li

    a, picture

      img
        width: 100%
        display: block
        border-radius: 3px

    a
      display: flex
      position: relative
      box-shadow: black(.7) 0 15px 25px -10px,
                  black(.5) 0 9px 8px -10px
      cursor: pointer
      transform: scale(1, 1) translateZ(0px) translate3d(0px, 0px, 0px)
      transition-duration: 200ms
      transition-property: transform, box-shadow
      transition-timing-function: ease-out
      aspect-ratio: 1200 / 630

      &:hover,
      &:focus
        box-shadow: black(.9) 0 20px 40px -16px,
                    black(.7) 0 10px 10px -10px
        transform: scale(1.04, 1.04) translateZ(0px) translate3d(0px, 0px, 0px)

        &:after
          opacity: 1

      &:focus:focus-visible
        outline: none

        &:after
          border-color: white

      &:after
        content: ''
        width: 100%
        height: 100%
        position: absolute
        inset: 0
        border: 2px solid white(.5)
        border-radius: 3px
        opacity: 0
        transition: opacity 200ms ease-out

